# AeroX

./: .gitignore  AeroX.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
aerox_client/: Cargo.toml
aerox_client/src/: config.rs  connection.rs  error.rs  lib.rs
aerox_client/src/high_level/: client.rs  event.rs  handler.rs  mod.rs
aerox_client/src/stream/: client.rs  mod.rs
aerox_config/: Cargo.toml
aerox_config/examples/: env_override_example.rs  load_config_example.rs
aerox_config/src/: lib.rs
aerox_core/: Cargo.toml
aerox_core/examples/: hello_plugin.rs
aerox_core/src/: app.rs  connection.rs  lib.rs  plugin.rs
aerox_core/src/error/: context.rs  framework.rs  mod.rs
aerox_core/tests/: integration_test.rs
aerox_ecs/: Cargo.toml
aerox_ecs/src/: bridge.rs  components.rs  events.rs  lib.rs  systems.rs  world.rs
aerox_network/: Cargo.toml
aerox_network/src/: connection.rs  lib.rs  transport.rs
aerox_network/src/connection/: id.rs  manager.rs  metrics.rs  mod.rs  pool.rs
aerox_network/src/protocol/: codec.rs  frame.rs  mod.rs
aerox_network/src/reactor/: acceptor.rs  balancer.rs  mod.rs  reactor.rs  worker.rs
aerox_plugins/: Cargo.toml
aerox_plugins/src/: heartbeat.rs  lib.rs  ratelimit.rs
aerox_protobuf/: Cargo.toml  build.rs
aerox_protobuf/examples/: protobuf_usage.rs
aerox_protobuf/proto/: messages.proto
aerox_protobuf/src/: lib.rs  registry.rs
aerox_router/: Cargo.toml
aerox_router/src/: context.rs  lib.rs  middleware.rs  router.rs
benches/: benchmark.rs
crates/aerox_config/: Cargo.toml
crates/aerox_config/src/: lib.rs
crates/aerox_core/src/: app.rs
crates/aerox_ecs/src/: events.rs  world.rs
crates/aerox_network/src/: lib.rs  transport.rs
crates/aerox_plugins/src/: ratelimit.rs
crates/aerox_router/src/: context.rs
docs/: PROJECT_SUMMARY.md  aerox_plan.md  architecture.md  configuration.md  getting_started.md  plan_process.md
examples/: BENCHMARK.md  README_AEROX_COMMUNICATION.md  README_COMPLETE_DEMO.md  aerox_communication_demo.rs  benchmark.rs  chat_room.rs  complete_demo.rs  complete_game_server.rs  config_example.toml  echo_server.rs  ecs_basics.rs  env_override_example.rs  highlevel_demo.rs  router_middleware.rs  start.rs
src/: config.rs  error.rs  lib.rs
src/client/: mod.rs
src/server/: builder.rs  mod.rs
