[package]
name = "aerox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AeroX - 高性能游戏服务器后端框架"

[workspace]
members = [
    "aerox_config",
    "aerox_core",
    "aerox_network",
    "aerox_protobuf",
    "aerox_ecs",
    "aerox_router",
    "aerox_plugins",
    "aerox_client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AeroX Team"]
license = "MIT"
repository = "https://github.com/aerox/aerox"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.40", features = ["full"] }
# Tokio 工具（编解码器）
tokio-util = { version = "0.7", features = ["codec"] }
# 零拷贝字节缓冲
bytes = "1.7"
# 异步工具
futures-util = "0.3"
# 序列化支持
serde = { version = "1.0", features = ["derive"] }
# 错误处理
thiserror = "2.0"
# 配置文件解析
toml = "0.8"
# CPU 核心数检测
num_cpus = "1.16"
# Protobuf 支持
prost = "0.13"
prost-types = "0.13"

# 内部 crate 依赖
aerox_config = { path = "aerox_config" }
aerox_core = { path = "aerox_core" }
aerox_network = { path = "aerox_network" }
aerox_protobuf = { path = "aerox_protobuf" }
aerox_ecs = { path = "aerox_ecs" }
aerox_router = { path = "aerox_router" }
aerox_plugins = { path = "aerox_plugins" }
aerox_client = { path = "aerox_client" }

[dependencies]
aerox_config = { workspace = true }
aerox_core = { workspace = true }
aerox_network = { workspace = true }
aerox_protobuf = { workspace = true }
aerox_ecs = { workspace = true }
aerox_router = { workspace = true }
aerox_plugins = { workspace = true }
aerox_client = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
