[package]
name = "aerox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AeroX - 高性能游戏服务器后端框架"

[workspace]
members = [
    "aerox_config",
    "aerox_core",
    "aerox_network",
    "aerox_protobuf",
    "aerox_ecs",
    "aerox_router",
    "aerox_plugins",
    "aerox_client",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.92.0"
authors = ["AeroX Team"]
license = "MIT"
repository = "https://github.com/cherish-ltt/AeroX"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.40", features = ["full"] }
# Tokio 工具（编解码器）
tokio-util = { version = "0.7", features = ["codec"] }
# 零拷贝字节缓冲
bytes = "1.7"
# 异步工具
futures-util = "0.3"
# 序列化支持
serde = { version = "1.0", features = ["derive"] }
# 错误处理
thiserror = "2.0"
# 配置文件解析
toml = "0.8"
# CPU 核心数检测
num_cpus = "1.16"
# Protobuf 支持
prost = "0.13"
prost-types = "0.13"

# 内部 crate 依赖
aerox_config = { path = "aerox_config" }
aerox_core = { path = "aerox_core" }
aerox_network = { path = "aerox_network" }
aerox_protobuf = { path = "aerox_protobuf" }
aerox_ecs = { path = "aerox_ecs" }
aerox_router = { path = "aerox_router" }
aerox_plugins = { path = "aerox_plugins" }
aerox_client = { path = "aerox_client" }

[features]
default = ["server", "client"]

# Server features - enables server-related APIs
server = [
    "dep:aerox_config",
    "dep:aerox_core",
    "dep:aerox_network",
    "dep:aerox_protobuf",
    "dep:aerox_ecs",
    "dep:aerox_router",
    "dep:aerox_plugins",
]

# Client features - enables client-related APIs
client = [
    "dep:aerox_client",
    "dep:aerox_network",
    "dep:aerox_protobuf",
]

[dependencies]
# Optional dependencies based on features
aerox_config = { workspace = true, optional = true }
aerox_core = { workspace = true, optional = true }
aerox_network = { workspace = true, optional = true, features = ["aerox_router"] }
aerox_protobuf = { workspace = true, optional = true }
aerox_ecs = { workspace = true, optional = true }
aerox_router = { workspace = true, optional = true }
aerox_plugins = { workspace = true, optional = true }
aerox_client = { workspace = true, optional = true }

# Always needed dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
