[package]
name = "aerox_client"
version = "0.1.1"
edition = "2024"
rust-version = "1.92.0"
authors = ["AeroX Team"]
license = "MIT"
repository = "https://github.com/cherish-ltt/AeroX"
description = "用于连接到AeroX服务器的AeroX客户端库"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
bytes = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
async-trait = "0.1"

# Internal crates
aerox_core = { path = "../aerox_core" , version = "0.1.1" }
aerox_network = { path = "../aerox_network" , version = "0.1.1" }
aerox_protobuf = { path = "../aerox_protobuf" , version = "0.1.1" }

# Additional client dependencies
futures = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
