[package]
name = "aerox_config"
version = "0.1.1"
edition = "2024"
rust-version = "1.92.0"
authors = ["AeroX Team"]
license = "MIT"
repository = "https://github.com/cherish-ltt/AeroX"
description = "AeroX 配置管理模块"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
