[package]
name = "aerox_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AeroX 核心运行时和插件系统"

[dependencies]
tokio = { workspace = true }
aerox_config = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
aerox_network = { workspace = true }
aerox_protobuf = { workspace = true }
aerox_ecs = { workspace = true }
aerox_router = { workspace = true }
bytes = { workspace = true }
