[package]
name = "aerox_core"
version = "0.1.1"
edition = "2024"
rust-version = "1.92.0"
authors = ["AeroX Team"]
license = "MIT"
repository = "https://github.com/cherish-ltt/AeroX"
description = "AeroX 核心运行时和插件系统"

[dependencies]
tokio = { workspace = true }
aerox_config = { version = "0.1.1" }
thiserror = { workspace = true }

[dev-dependencies]
aerox_network = { workspace = true }
aerox_protobuf = { workspace = true }
aerox_ecs = { workspace = true }
aerox_router = { workspace = true }
bytes = { workspace = true }
