[package]
name = "aerox_ecs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AeroX Bevy ECS 整合层"

[dependencies]
# Bevy ECS
bevy = { version = "0.14", default-features = false }

# 内部依赖
aerox_core = { workspace = true }
aerox_network = { workspace = true }
bytes = { workspace = true }
