[package]
name = "aerox_ecs"
version = "0.1.1"
edition = "2024"
rust-version = "1.92.0"
authors = ["AeroX Team"]
license = "MIT"
repository = "https://github.com/cherish-ltt/AeroX"
description = "AeroX Bevy ECS 整合层"

[dependencies]
# Bevy ECS
bevy = { version = "0.14", default-features = false }

# 内部依赖
aerox_core = { path = "../aerox_core" , version = "0.1.1" }
aerox_network = { path = "../aerox_network" , version = "0.1.1" }
bytes = { workspace = true }
