[package]
name = "aerox_network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AeroX 网络层抽象和协议实现"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
aerox_core = { workspace = true }
aerox_config = { workspace = true }
num_cpus = { workspace = true }
