[package]
name = "aerox_network"
version = "0.1.1"
edition = "2024"
rust-version = "1.92.0"
authors = ["AeroX Team"]
license = "MIT"
repository = "https://github.com/cherish-ltt/AeroX"
description = "AeroX 网络层抽象和协议实现"

[features]
default = []
aerox_router = ["dep:aerox_router"]

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
num_cpus = { workspace = true }
aerox_core = { path = "../aerox_core" , version = "0.1.1" }
aerox_config = { path = "../aerox_config" , version = "0.1.1" }
aerox_router = { path = "../aerox_router" , version = "0.1.1" , optional = true }
