[package]
name = "aerox_plugins"
version = "0.1.1"
edition = "2024"
rust-version = "1.92.0"
authors = ["AeroX Team"]
license = "MIT"
repository = "https://github.com/cherish-ltt/AeroX"
description = "AeroX 官方插件集合"

[dependencies]
aerox_core = { path = "../aerox_core" , version = "0.1.1" }
aerox_config = { path = "../aerox_config" , version = "0.1.1" }
