[package]
name = "aerox_protobuf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AeroX Protobuf 编解码支持"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
prost-build = "0.13"
