[package]
name = "aerox_protobuf"
version = "0.1.1"
edition = "2024"
rust-version = "1.92.0"
authors = ["AeroX Team"]
license = "MIT"
repository = "https://github.com/cherish-ltt/AeroX"
description = "AeroX Protobuf 编解码支持"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
prost-build = "0.13"
