[package]
name = "aerox_router"
version = "0.1.1"
edition = "2024"
rust-version = "1.92.0"
authors = ["AeroX Team"]
license = "MIT"
repository = "https://github.com/cherish-ltt/AeroX"
description = "AeroX 路由和中间件系统"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
aerox_core = { path = "../aerox_core" , version = "0.1.1" }
